--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</title>
 </head>
 <body style="background:black">
-	<img scr="http://i.imgur.com/xf4sjUm.png" />
+	<img src="http://i.imgur.com/xf4sjUm.png" />
 	<p>
 	</p>
 	<h3 style="color:white; font-family: Futura">
