--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 	<p>
 	</p>
 	<h3 style="color:white; font-family: Futura">
-		<strong>About</strong>
+			<center>
+				<strong>About</strong>
+			</center>
 	</h3>
-		<p sytle="color:white; font-family: Futura">
-			This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream.
-		</p>
+		<center>
+			<p style="color:white; font-family: Futura">
+				This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream.
+			</p>
+		</center>	
 	<h3 style="color:white; font-family: Futura">
 		Download
 	</h3>
