--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</title>
 </head>
 <body style="background:black">
-	<img src="http://i.imgur.com/xf4sjUm.png" />
+	<img src="http://i.imgur.com/xf4sjUm.png" width="600" height="250" />
 	<p>
 	</p>
 	<h3 style="color:white; font-family: Futura">
@@ -16,12 +16,19 @@
 	</h3>
 		<center>
 			<p style="color:white; font-family: Futura">
-				This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream.
+				This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream. This application was created by Jacob Tatz, John Lim, Daniel D'amico, and John DeFalco.
 			</p>
 		</center>	
 	<h3 style="color:white; font-family: Futura">
-		Download
+		<center>
+			Download
+		</center>
 	</h3>
+	<p>
+	</p>
+	<p>
+	</p>
+	<img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/v/t34.0-12/10152787_524521000999208_89423820_n.jpg?oh=04225ad470bb96298877dfd14de4b389&oe=53305091" width="20" height="20" />
 
 </body>
 </html>
