--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
 		</center>
 	</h3>
 	<p>
+		fhf
 	</p>
 	<p>
+		fhf
 	</p>
-	<img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/v/t34.0-12/10152787_524521000999208_89423820_n.jpg?oh=04225ad470bb96298877dfd14de4b389&oe=53305091" width="100" height="100" />
-
+	<center>
+		<img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/v/t34.0-12/10152787_524521000999208_89423820_n.jpg?oh=04225ad470bb96298877dfd14de4b389&oe=53305091" width="100" height="100" />
+	</center>
 </body>
 </html>
