--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
 	<center>
 		<img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/v/t34.0-12/10152787_524521000999208_89423820_n.jpg?oh=04225ad470bb96298877dfd14de4b389&oe=53305091" width="300" height="300" />
 	</center>
+	<p style="color:white; font-size: 10px; font-family: Futura">
+		<center>
+			(Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!)
+		</center>
+	</p>
+
 </body>
 </html>
