--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</center>
 	<p style="color:white; font-family: Futura;">
 		<center>
-			(Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!)
+			Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
 		</center>
 	</p>
 
