--- a/index.html
+++ b/index.html
@@ -9,33 +9,33 @@
 	<img src="http://i.imgur.com/xf4sjUm.png" width="500" height="200" />
 	<p>
 	</p>
-	<h3 style="color:white; font-family: Futura">
-			<center>
+	<h4 style="color:white; font-family: Futura">
+<center>
 				<strong>About</strong>
-			</center>
-	</h3>
-		<center>
+	</h4>
 			<p style="color:white; font-family: Futura">
-				This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream. This application was created by Jacob Tatz, John Lim, Daniel D'amico, and John DeFalco.
+				This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream. This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
 			</p>
-		</center>	
-	<h3 style="color:white; font-family: Futura">
-		<center>
-			Download
-		</center>
-	</h3>
+	<h4 style="color:white; font-family: Futura">
+			<strong>How To Use</strong>
+	</h4>
+	<h3 style="color:white; font-family: Futura">All OSs</h3>
+		<ol>
+			<li style="color:white; font-family: Futura">Download source code</li>
+			<li style="color:white; font-family: Futura">Download necessary libraries</li>
+			<li style="color:white; font-family: Futura">Run or compile DJTwitch.py</li>
+		</ol>
+	<h4>
+			<strong>Download</strong>
+	</h4>
+			<a href= >Click here</a>
 	<p>
 		fhf
 	</p>
-	<p>
-		fhf
-	</p>
-	<center>
 		<img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/v/t34.0-12/10152787_524521000999208_89423820_n.jpg?oh=04225ad470bb96298877dfd14de4b389&oe=53305091" width="300" height="300" />
 		<p style="color:white; font-size 10 px; font-family Futura">
 			Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
 		</p>
-	</center>
-
+</center
 </body>
 </html>
