--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 	<img src="http://i.imgur.com/xf4sjUm.png" width="500" height="200" />
 	<p>
 	</p>
-	<h4 style="color:white; font-family: Futura">
+	<h2 style="color:white; font-family: Futura">
 <center>
 				<strong>About</strong>
-	</h4>
+	</h2>
 			<p style="color:white; font-family: Futura">
 				This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream. This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
 			</p>
-	<h4 style="color:white; font-family: Futura">
+	<h2 style="color:white; font-family: Futura">
 			<strong>How To Use</strong>
-	</h4>
+	</h2>
 	<h3 style="color:white; font-family: Futura">All OSs</h3>
 		<ol>
 			<li style="color:white; font-family: Futura">Download source code</li>
-			<li style="color:white; font-family: Futura">Download necessary libraries</li>
+			<li style="color:white; font-family: Futura">Download necessary modules</li>
 			<li style="color:white; font-family: Futura">Run or compile DJTwitch.py</li>
 		</ol>
-	<h4>
+	<h2>
 			<strong>Download</strong>
-	</h4>
+	</h2>
 			<a href= >Click here</a>
 	<p>
 		fhf
@@ -36,6 +36,6 @@
 		<p style="color:white; font-size 10 px; font-family Futura">
 			Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
 		</p>
-</center
+</center>
 </body>
 </html>
