--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 	<p>
 	</p>
 	<h2 style="color:white; font-family: Futura">
-<center>
+	<center>
 				<strong>About</strong>
 	</h2>
 			<p style="color:white; font-family: Futura">
 				This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream. This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
 			</p>
+	</center>
+	<center>
 	<h2 style="color:white; font-family: Futura">
 			<strong>How To Use</strong>
 	</h2>
@@ -25,13 +27,11 @@
 			<li style="color:white; font-family: Futura">Download necessary modules</li>
 			<li style="color:white; font-family: Futura">Run or compile DJTwitch.py</li>
 		</ol>
+	</center>
+	<center>
 	<h2>
 			<strong>Download</strong>
 	</h2>
-			<a href= >Click here</a>
-	<p>
-		fhf
-	</p>
 		<img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/v/t34.0-12/10152787_524521000999208_89423820_n.jpg?oh=04225ad470bb96298877dfd14de4b389&oe=53305091" width="300" height="300" />
 		<p style="color:white; font-size 10 px; font-family Futura">
 			Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
