--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</p>
 	<h2 style="color:white; font-family: Futura">
 	<center>
-				<strong>About</strong>
+				<strong><u>About</u></strong>
 	</h2>
 			<p style="color:white; font-family: Futura">
 				This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream. This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
@@ -19,18 +19,18 @@
 	</center>
 	<center>
 	<h2 style="color:white; font-family: Futura">
-			<strong>How To Use</strong>
+			<strong><u>How To Use</u></strong>
 	</h2>
-	<h3 style="color:white; font-family: Futura">All OSs</h3>
-		<ol>
-			<li style="color:white; font-family: Futura">Download source code</li>
-			<li style="color:white; font-family: Futura">Download necessary modules</li>
-			<li style="color:white; font-family: Futura">Run or compile DJTwitch.py</li>
-		</ol>
+	<h3 style="color:white; font-family: Futura">All OS's</h3>
+		<p style="color:white; font-family: Futura"> 
+			1. Download source code
+			2. Download necessary modules
+			3. Run or compile DJTwitch
+		</p>
 	</center>
 	<center>
-	<h2>
-			<strong>Download</strong>
+	<h2 style="color:white; font-family: Futura">
+			<strong><u><Download</u></strong>
 	</h2>
 		<img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/v/t34.0-12/10152787_524521000999208_89423820_n.jpg?oh=04225ad470bb96298877dfd14de4b389&oe=53305091" width="300" height="300" />
 		<p style="color:white; font-size 10 px; font-family Futura">
