--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
 	<h2 style="color:white; font-family: Futura">
 			<strong><u>How To Use</u></strong>
 	</h2>
-	<h3 style="color:white; font-family: Futura">All OS's</h3>
+	<h3 style="color:white; font-family: Futura"><u>All OS's</u></h3>
 		<p style="color:white; font-family: Futura"> 
 			1. Download source code
+		</p>
+		<p style="color:white; font-family: Futura">
 			2. Download necessary modules
+		</p>
+		<p style="color:white; font-family: Futura">
 			3. Run or compile DJTwitch
 		</p>
+		
 	</center>
 	<center>
 	<h2 style="color:white; font-family: Futura">
-			<strong><u><Download</u></strong>
+			<strong><u>Download</u></strong>
 	</h2>
 		<img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/v/t34.0-12/10152787_524521000999208_89423820_n.jpg?oh=04225ad470bb96298877dfd14de4b389&oe=53305091" width="300" height="300" />
 		<p style="color:white; font-size 10 px; font-family Futura">
