--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 	<p style="color:white; font-family: Futura">
 		To download the source code, click <a href="http://github.com/DJTwitch/DJTwitchApp">here</a>
 	</p>
+	<p style="color:white; font-family: Futura">
+		Live Demo: <a href="http://goo.gl/U76OHo"> click here</a>
+	</p>
 		<img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/v/t34.0-12/10152787_524521000999208_89423820_n.jpg?oh=04225ad470bb96298877dfd14de4b389&oe=53305091" width="300" height="300" />
 		<p style="color:white; font-size 10 px; font-family Futura">
 			Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
