Change pic link/ css attempt

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<title>
 		DJ Twitch
 	</title>
+    <link type="text/css" rel="DJTwitch" href="DJTwitch.css" />
 </head>
-<body style="background:black">
+<body style="background-color: #030303;">
 	<img src="http://i.imgur.com/xf4sjUm.png" width="500" height="200" />
 	<p>
 	</p>
@@ -13,11 +14,12 @@
 	<center>
 				<strong><u>About</u></strong>
 	</h2>
+    
+    
 			<p style="color:white; font-family: Futura">
 				This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream. This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
 			</p>
-	</center>
-	<center>
+            </center>
 	<h2 style="color:white; font-family: Futura">
 			<strong><u>How To Use</u></strong>
 	</h2>
@@ -31,8 +33,7 @@
 		<p style="color:white; font-family: Futura">
 			3. Run or compile DJTwitch
 		</p>
-		
-	</center>
+		</center>
 	<center>
 	<h2 style="color:white; font-family: Futura">
 			<strong><u>Download</u></strong>
@@ -43,7 +44,9 @@
 	<p style="color:white; font-family: Futura">
 		Live Demo: <a href="http://goo.gl/U76OHo"> click here</a>
 	</p>
-		<img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/v/t34.0-12/10152787_524521000999208_89423820_n.jpg?oh=04225ad470bb96298877dfd14de4b389&oe=53305091" width="500" height="300" />
+    </center>
+    <center>
+		<img src="http://i.imgur.com/oZ6n0KY.jpg" width="500" height="300" />
 		<p style="color:white; font-size 10 px; font-family Futura">
 			Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
 		</p>
