--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>
 		DJ Twitch
 	</title>
+    <link type="text/css" rel="stylesheet" href"DJTwitch.css" />
 </head>
 <body style="background:black">
 	<img src="http://i.imgur.com/xf4sjUm.png" width="500" height="200" />
