--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 	<center>
 				<strong><u>About</u></strong>
 	</h2>
+    	<div>
 			<p>
 				This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream. This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
 			</p>
+       </div>
 	</center>
 	<center>
 	<h2 style="color:white; font-family: Futura">
