--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
 	</title>
     <link type="text/css" rel="stylesheet" href"DJTwitch.css" />
 </head>
-<body style="background:black">
+<body>
 	<img src="http://i.imgur.com/xf4sjUm.png" width="500" height="200" />
 	<p>
 	</p>
-	<h2 style="color:white; font-family: Futura">
+	<h2>
 	<center>
-				<strong><u>About</u></strong>
+				<b><u>About</u></b>
 	</h2>
-    	<div>
-			<p>
+			<p class="About">
 				This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream. This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
-			</p>
-       </div>
+			</p>  
 	</center>
 	<center>
-	<h2 style="color:white; font-family: Futura">
-			<strong><u>How To Use</u></strong>
+	<h2>
+			<b><u>How To Use</u></b>
 	</h2>
-	<h3 style="color:white; font-family: Futura"><u>All OS's</u></h3>
+	<h3>
+    	<u>All OS's</u>
+    </h3>
 		<p> 
 			1. Download source code
 		</p>
@@ -37,8 +37,8 @@
 		
 	</center>
 	<center>
-	<h2 style="color:white; font-family: Futura">
-			<strong><u>Download</u></strong>
+	<h2>
+			<b><u>Download</u></b>
 	</h2>
 	<p>
 		To download the source code, click <a href="http://github.com/DJTwitch/DJTwitchApp">here</a>
