--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 				<b><u>About</u></b>
 	</h2>
 			<p class="About">
-				This program will allow users watching live streams on twitch.tv<br>
-              to vote on the live music they can listen to during the stream.<br> 
-              This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
+				This program will allow users watching live streams on twitch.tv<br>to vote on the live music they can listen to during the stream.<br>This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
 			</p>  
 	</center>
 	<center>
