--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	<center>
 				<b><u>About</u></b>
 	</h2>
-			<p class="About">
+    </center>
+    <center>
+			<p>
 				This program will allow users watching live streams on twitch.tv<br />to vote on the live music they can listen to during the stream.<br />This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
 			</p>  
 	</center>
