--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 				<b><u>About</u></b>
 	</h2>
     </center>
-    <center>
 			<p>
-				This program will allow users watching live streams on twitch.tv<br />to vote on the live music they can listen to during the stream.<br />This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
-			</p>  
-	</center>
+            <center>
+				This program will allow users watching live streams on twitch.tv<br>to vote on the live music they can listen to during the stream.<br>This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
+             </center>
+			</p> 
 	<center>
 	<h2>
 			<b><u>How To Use</u></b>
