--- a/index.html
+++ b/index.html
@@ -4,53 +4,52 @@
 	<title>
 		DJ Twitch
 	</title>
-    <link type="text/css" rel="DJTwitch" href="DJTwitch.css" />
+    <link type="text/css" rel="stylesheet" href"DJTwitch.css" />
 </head>
-<body style="background-color: #030303;">
+<body>
 	<img src="http://i.imgur.com/xf4sjUm.png" width="500" height="200" />
 	<p>
 	</p>
-	<h2 style="color:white; font-family: Futura">
+	<h2>
 	<center>
-				<strong><u>About</u></strong>
+				<b><u>About</u></b>
 	</h2>
-    
-    
-			<p style="color:white; font-family: Futura">
-				This program will allow users watching live streams on twitch.tv to vote on the live music they can listen to during the stream. This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
-			</p>
-            </center>
-	<h2 style="color:white; font-family: Futura">
-			<strong><u>How To Use</u></strong>
+    </center>
+			<p>
+            <center>
+				This program will allow users watching live streams on twitch.tv<br>to vote on the live music they can listen to during the stream.<br>This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
+             </center>
+			</p> 
+	<center>
+	<h2>
+			<b><u>How To Use</u></b>
 	</h2>
-	<h3 style="color:white; font-family: Futura"><u>All OS's</u></h3>
-		<p style="color:white; font-family: Futura"> 
+	<h3>
+    	<u>All OS's</u>
+    </h3>
+		<p> 
 			1. Download source code
 		</p>
-		<p style="color:white; font-family: Futura">
+		<p>
 			2. Download necessary modules
 		</p>
-		<p style="color:white; font-family: Futura">
+		<p>
 			3. Run or compile DJTwitch
 		</p>
-		</center>
+		
+	</center>
 	<center>
-	<h2 style="color:white; font-family: Futura">
-			<strong><u>Download</u></strong>
+	<h2>
+			<b><u>Download</u></b>
 	</h2>
-	<p style="color:white; font-family: Futura">
+	<p>
 		To download the source code, click <a href="http://github.com/DJTwitch/DJTwitchApp">here</a>
 	</p>
-	<p style="color:white; font-family: Futura">
+	<p>
 		Live Demo: <a href="http://goo.gl/U76OHo"> click here</a>
 	</p>
-<<<<<<< HEAD
-    </center>
-    <center>
-=======
->>>>>>> FETCH_HEAD
 		<img src="http://i.imgur.com/oZ6n0KY.jpg" width="500" height="300" />
-		<p style="color:white; font-size 10 px; font-family Futura">
+		<p>
 			Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
 		</p>
 </center>
