--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>
 		DJ Twitch
 	</title>
-    <link type="text/css" rel="stylesheet" href"DJTwitch.css">
+    <link rel="stylesheet" type="text/css" href="DJTwitch.css">
 </head>
 <body>
 	<img src="http://i.imgur.com/xf4sjUm.png" width="500" height="200" />
