--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	</p>
 	<p>
 		<img src="http://i.imgur.com/oZ6n0KY.jpg" width="500" height="300" />
-			Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
+		<br>Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
 		</p>
 </body>
 </html>
