--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="DJTwitch.css">
 </head>
 <body>
-	<img src="http://i.imgur.com/xf4sjUm.png" width="500" height="200" />
+	<img class="hackbca" src="http://i.imgur.com/xf4sjUm.png" />
 	<h2>
 				<b><u>About</u></b>
 	</h2>
