--- a/index.html
+++ b/index.html
@@ -4,23 +4,16 @@
 	<title>
 		DJ Twitch
 	</title>
-    <link type="text/css" rel="stylesheet" href"DJTwitch.css">
+    <link rel="stylesheet" type="text/css" href="DJTwitch.css">
 </head>
 <body>
-	<img src="http://i.imgur.com/xf4sjUm.png" width="500" height="200" />
-	<p>
-	</p>
+	<img class="logo" src="http://i.imgur.com/xf4sjUm.png" />
 	<h2>
-	<center>
 				<b><u>About</u></b>
 	</h2>
-    </center>
 			<p>
-            <center>
 				This program will allow users watching live streams on twitch.tv<br>to vote on the live music they can listen to during the stream.<br>This application was created by Jacob Tatz, John Lim, Daniel D'Amico, and John DeFalco.
-             </center>
 			</p> 
-	<center>
 	<h2>
 			<b><u>How To Use</u></b>
 	</h2>
@@ -36,9 +29,6 @@
 		<p>
 			3. Run or compile DJTwitch
 		</p>
-		
-	</center>
-	<center>
 	<h2>
 			<b><u>Download</u></b>
 	</h2>
@@ -48,10 +38,9 @@
 	<p>
 		Live Demo: <a href="http://goo.gl/U76OHo"> click here</a>
 	</p>
-		<img src="http://i.imgur.com/oZ6n0KY.jpg" width="500" height="300" />
+		<img class="hackbca" src="http://i.imgur.com/oZ6n0KY.jpg"/>
 		<p>
-			Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
+		<br>Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
 		</p>
-</center>
 </body>
 </html>
