--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
 		<p>
 		<br>Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
 		</p>
+	<p>
+	<br><a href="news.html">Test</a>
+	</p>
 </body>
 </html>
