--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>
 		DJ Twitch
 	</title>
-    <link rel="stylesheet" type="text/css" href="DJTwitch.css">
+    <link rel="stylesheet" type="text/css" href="landing.css">
 </head>
 
 <body>
