--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
+<a href="main.html">
 <img class="landing" src="landing.jpg"/>
-<h1><b>
-<a href="main.html">Click Here</a>
-</b></h1>
+</a>
 </body>
 </html>
