--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <a href="main.html">
-<img class="landing" src="landing.jpg"/>
+<img class="landing" src="landing.png"/>
 </a>
 </body>
 </html>
