--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		DJ Twitch
 	</title>
     <link rel="stylesheet" type="text/css" href="landing.css">
+	<link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
