--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		DJ Twitch
 	</title>
     <link rel="stylesheet" type="text/css" href="landing.css">
-	<link rel="shortcut icon" type='image/x-icon' href="favicon.ico">
+	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 </head>
 
 <body>
