--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 		DJ Twitch
 	</title>
     <link rel="stylesheet" type="text/css" href="DJTwitch.css">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 </head>
 <body>
 	<img class="logo" src="http://i.imgur.com/xf4sjUm.png" />
