--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<p>
 		Live Demo: <a href="http://goo.gl/U76OHo"> click here</a>
 	</p>
-		<img class="hackbca" src="http://i.imgur.com/oZ6n0KY.jpg"/>
+		<img class="hackbca" src="http://i.imgur.com/1JkV33v.jpg"/>
 		<p>
 		<br>Special thanks to our special friend Parker Pacquiao, who made this awesome artwork!
 		</p>
